# personal-website-rust

./: Cargo.toml
src/: main.rs  markdown.rs  media.rs  models.rs
src/routes/: articles.rs  gallery.rs  home.rs  mod.rs  projects.rs
static/css/: style.css
templates/: base.html  nav.html
templates/pages/: album.html  article.html  articles.html  gallery.html  home.html  projects.html
templates/partials/: asset_grid.html
