[package]
name = "personal-website-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["fs"] }
